syntax = "proto3";

package swiftschool.core.v1;

option go_package = "swiftschool/app/core/v1;corev1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// AddressService manages addresses for various entity types.
service AddressService {
  rpc CreateAddress(CreateAddressRequest) returns (AddressResponse) {
    option (google.api.http) = { post: "/api/addresses/register" body: "*" };
  }
}

message CreateAddressRequest {
  string owner_id = 1;
  string owner_type = 2;
  string address_type = 3;
  string address_line_1 = 4;
  google.protobuf.StringValue address_line_2 = 5;
  google.protobuf.StringValue country_id = 6;
  google.protobuf.StringValue state_id = 7;
  google.protobuf.StringValue district_id = 8;
  google.protobuf.StringValue postal_code = 9;
}

message AddressResponse {
  string id = 1;
  string owner_id = 2;
  string owner_type = 3;
  string address_type = 4;
  string address_line_1 = 5;
  google.protobuf.StringValue address_line_2 = 6;
  google.protobuf.StringValue country_id = 7;
  google.protobuf.StringValue state_id = 8;
  google.protobuf.StringValue district_id = 9;
  google.protobuf.StringValue postal_code = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}
