syntax = "proto3";

package swiftschool.core.v1;

option go_package = "swiftschool/app/core/v1;corev1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

// GuardianService manages guardian records and student-guardian links.
service GuardianService {
  rpc CreateGuardian(CreateGuardianRequest) returns (GuardianResponse) {
    option (google.api.http) = { post: "/api/guardians/register" body: "*" };
  }
  rpc LinkStudentGuardian(LinkStudentGuardianRequest) returns (LinkStudentGuardianResponse) {
    option (google.api.http) = { post: "/api/guardians/link_student" body: "*" };
  }
}

message CreateGuardianRequest {
  string first_name = 1;
  google.protobuf.StringValue last_name = 2;
  google.protobuf.StringValue email = 3;
  google.protobuf.StringValue phone = 4;
  google.protobuf.StringValue profession = 5;
  google.protobuf.DoubleValue annual_income = 6;
}

message GuardianResponse {
  string id = 1;
  string first_name = 2;
  google.protobuf.StringValue last_name = 3;
  google.protobuf.StringValue email = 4;
  google.protobuf.StringValue phone = 5;
  google.protobuf.StringValue profession = 6;
  google.protobuf.DoubleValue annual_income = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
}

message LinkStudentGuardianRequest {
  string student_id = 1;
  string guardian_id = 2;
  string relationship = 3;
  bool is_primary_contact = 4;
}

message LinkStudentGuardianResponse {
  bool success = 1;
}
