syntax = "proto3";

package swiftschool.core.v1;

option go_package = "swiftschool/app/core/v1;corev1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "proto/common/v1/common.proto";

// InstituteService manages institute lifecycle.
service InstituteService {
  rpc CreateInstitute(CreateInstituteRequest) returns (InstituteResponse) {
    option (google.api.http) = { post: "/api/institutes/register" body: "*" };
  }
  rpc GetInstitute(swiftschool.common.v1.IdRequest) returns (InstituteResponse) {
    option (google.api.http) = { get: "/api/institutes/get" };
  }
  rpc ListInstitutes(swiftschool.common.v1.Empty) returns (ListInstitutesResponse) {
    option (google.api.http) = { get: "/api/institutes/list" };
  }
  rpc UpdateInstitute(UpdateInstituteRequest) returns (InstituteResponse) {
    option (google.api.http) = { put: "/api/institutes/update" body: "*" };
  }
  rpc DeleteInstitute(swiftschool.common.v1.DeleteRequest) returns (swiftschool.common.v1.Empty) {
    option (google.api.http) = { delete: "/api/institutes/delete" };
  }
}

message CreateInstituteRequest {
  string name = 1;
  string code = 2;
  google.protobuf.StringValue currency_code = 3;
  google.protobuf.StringValue logo_url = 4;
  google.protobuf.StringValue website = 5;
  string timezone = 6;
  int32 fiscal_year_start_month = 7;
  bool is_active = 8;
}

message UpdateInstituteRequest {
  string id = 1;
  string name = 2;
  string code = 3;
  google.protobuf.StringValue currency_code = 4;
  google.protobuf.StringValue logo_url = 5;
  google.protobuf.StringValue website = 6;
  string timezone = 7;
  int32 fiscal_year_start_month = 8;
  bool is_active = 9;
}

message InstituteResponse {
  string id = 1;
  string name = 2;
  string code = 3;
  google.protobuf.StringValue currency_code = 4;
  google.protobuf.StringValue logo_url = 5;
  google.protobuf.StringValue website = 6;
  string timezone = 7;
  int32 fiscal_year_start_month = 8;
  bool is_active = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
  google.protobuf.Timestamp deleted_at = 12;
}

message ListInstitutesResponse {
  repeated InstituteResponse institutes = 1;
}
