syntax = "proto3";

package swiftschool.core.v1;

option go_package = "swiftschool/app/core/v1;corev1";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "proto/common/v1/common.proto";

// StudentService manages student records.
service StudentService {
  rpc CreateStudent(CreateStudentRequest) returns (StudentResponse) {
    option (google.api.http) = { post: "/api/students/register" body: "*" };
  }
  rpc UpdateStudent(UpdateStudentRequest) returns (StudentResponse) {
    option (google.api.http) = { put: "/api/students/update" body: "*" };
  }
  rpc DeleteStudent(swiftschool.common.v1.TenantDeleteRequest) returns (swiftschool.common.v1.Empty) {
    option (google.api.http) = { delete: "/api/students/delete" };
  }
  rpc GetStudentFullProfile(swiftschool.common.v1.TenantIdRequest) returns (StudentResponse) {
    option (google.api.http) = { get: "/api/students/profile" };
  }
  rpc ListStudentsByClass(ListStudentsByClassRequest) returns (ListStudentsResponse) {
    option (google.api.http) = { get: "/api/students/list_by_class" };
  }
  rpc SearchStudents(SearchStudentsRequest) returns (ListStudentsResponse) {
    option (google.api.http) = { get: "/api/students/search" };
  }
}

message CreateStudentRequest {
  string institute_id = 1;
  string admission_no = 2;
  string first_name = 3;
  google.protobuf.StringValue last_name = 4;
  google.protobuf.Timestamp dob = 5;
  string gender = 6;
  string blood_group = 7;
  string social_category = 8;
  google.protobuf.StringValue current_class_id = 9;
  google.protobuf.StringValue nationality = 10;
  google.protobuf.StringValue preferred_language = 11;
  swiftschool.common.v1.SocialMediaHandles social_media_handles = 12;
  repeated swiftschool.common.v1.LanguageSkill language_skills = 13;
}

message UpdateStudentRequest {
  string id = 1;
  string institute_id = 2;
  string admission_no = 3;
  string first_name = 4;
  google.protobuf.StringValue last_name = 5;
  google.protobuf.Timestamp dob = 6;
  string gender = 7;
  string blood_group = 8;
  string social_category = 9;
  google.protobuf.StringValue current_class_id = 10;
  google.protobuf.StringValue nationality = 11;
  google.protobuf.StringValue preferred_language = 12;
  swiftschool.common.v1.SocialMediaHandles social_media_handles = 13;
  repeated swiftschool.common.v1.LanguageSkill language_skills = 14;
}

message StudentResponse {
  string id = 1;
  string institute_id = 2;
  string admission_no = 3;
  string first_name = 4;
  google.protobuf.StringValue last_name = 5;
  google.protobuf.Timestamp dob = 6;
  string gender = 7;
  string blood_group = 8;
  string social_category = 9;
  google.protobuf.StringValue current_class_id = 10;
  google.protobuf.StringValue nationality = 11;
  google.protobuf.StringValue preferred_language = 12;
  swiftschool.common.v1.SocialMediaHandles social_media_handles = 13;
  repeated swiftschool.common.v1.LanguageSkill language_skills = 14;
  google.protobuf.Timestamp created_at = 15;
  google.protobuf.Timestamp updated_at = 16;
}

message ListStudentsResponse {
  repeated StudentResponse students = 1;
}

message ListStudentsByClassRequest {
  string institute_id = 1;
  string class_id = 2;
}

message SearchStudentsRequest {
  string institute_id = 1;
  string query = 2;
}
